[package]
name = "palmtree"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
build = "build.rs"

[[bench]]
name = "palmtree"
harness = false

[features]
test = ["arbitrary"]
tree_debug = []

[dependencies]
sized-chunks = "0.6.2"
refpool = "0.4.2"
typenum = "1.12"
arbitrary = { version = "0.4", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
proptest = "0.10"
proptest-derive = "0.2"

[build-dependencies]
version_check = "0.9.2"
